# backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.prod.yaml  compose.yaml  copy_confs.sh  nginx.prod.conf  pyproject.toml
.github/workflows/: docker-prod.yaml
lan_backend/: __main__.py
migrations/: env.py
migrations/versions/: 2024_06_25_2230-1c707ca44a76_database_creation.py  2024_06_26_1034-b56ccb88bd22_changed_column_names.py  2024_06_26_1300-ec75b9a2eec8_revised_profile_and_user_relations.py  2024_06_26_1618-48608ac3258c_revised_user_and_participant_relations_.py  2024_06_27_1204-30c66226c001_profile_model_redone.py  2024_07_01_1644-b7396d04f801_redo_full_db.py  2024_07_01_1650-01270f6f472e_rewrite_user_db_to_use_on_site.py  2024_07_01_1825-2ac92b82bbda_add_optional_to_user.py  2024_07_01_1859-fa8b5c7dc3d2_redo_the_match_db.py  2024_07_03_1233-afbe01daa6df_made_date_of_birth_nullable.py  2024_07_03_1258-014d88a6fd52_add_hobby_and_social_media_to_profiles.py  2024_07_03_1313-4e1cbaf68142_logically_separated_user_and_profile.py  2024_07_04_1731-e224f2cbfa26_redo_the_user_database_to_be_the_general.py  2024_07_04_1754-86f863f80abe_redo_4.py  2024_07_09_1335-b07ddb2a8b71_reworked_models_to_work_for_oauth2.py  2024_07_09_1531-a15bbe989ec1_reset_db_history.py  2024_07_09_2029-2602dcc2e19e_revised_user_model_to_support_oauth2.py  2024_07_10_1233-c62459f4db55_profile_s_id_is_now_foreign_key_of_user.py  2024_07_10_1621-1e12b703e0db_added_nullable_fields_to_user.py  (+8 more)
src/: config.py  database.py  exceptions.py  test.py
src/api/: __main__.py  (+3 more)
(+45 files in other folders)
